bug fix: change timer and moves box font color, so score is visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,11 +74,12 @@ h1{
     height: 40px;
     line-height: 40px;
     text-align: center;
-    border: 3px solid #555;
+    color: #222;
     background-color: #f5f5f5;
+    border: 3px solid #555;
     border-radius: 10px;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 1.2rem;
     text-transform: capitalize;
 }
 
